SVN $Id$
SVN $URL$
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    12 April 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130412
Tag Summary: Three separate bug fixes
             1) io_netcdf.F90 fixes issue with CECO + pnetcdf
             2) pop2.buildnml.csh cleans up remnants of a change made
                in 20120919 tag but removed in 20120927 tag (left one
                block of code in by mistake)
             3) rest of files are a fix that checks to see if any tavg
                stream files are still open at the end of the run and,
                if so, closes them.

Files Modified:
M       source/io_netcdf.F90
M       source/output.F90
M       source/tavg.F90
M       bld/pop2.buildnml.csh
M       drivers/cpl_mct/POP_FinalMod.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    03 April 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130403
Tag Summary: Remove epbal scale factor from mct and esmf drivers

Files Modified:
M            45561   drivers/cpl_mct/ocn_comp_mct.F90
M            45561   drivers/cpl_esmf/ocn_comp_esmf.F90
===============================================================================
Tag Creator: mlevy
Developers:  mlevy
Tag Date:    12 March 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130312a
Tag Summary: Fix in build-namelist to properly name diag output in multi-
             instance runs, addition of ecosys_parms namelist to namelist
             definitions.

Files Modified:
M            44699   bld/build-namelist
M            44699   bld/namelist_files/namelist_definition_pop2.xml
===============================================================================
Tag Creator: mlevy
Developers:  njn01
Tag Date:    12 March 2013
Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130312
Tag Summary: Bring in Nancy's fixes for near-inertial wave work.
