@@ -3,6 +3,16 @@ SVN $URL$
 ===============================================================================
 Tag Creator: mlevy
 Developers:  mlevy
+Tag Date:    16 April 2013
+Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130416
+Tag Summary: A little cleanup following the addition of final_output
+
+Files Modified:
+M            46058   source/output.F90
+M            46058   source/tavg.F90
+===============================================================================
+Tag Creator: mlevy
+Developers:  mlevy
 Tag Date:    12 April 2013
 Tag Name:    pop2/trunk_tags/cesm_pop_2_1_20130412
 Tag Summary: Three separate bug fixes
